service/tests/requests/snapshots/categories/can_list_categories_with_pagination@categories.snap
---
source: tests/requests/categories.rs
expression: "(response.status_code(), response.text())"
---
(
    200,
    "{\"data\":[{\"id\":101,\"pid\":\"PID\",\"name\":\"t-shirts\",\"slug\":\"t-shirts\",\"imageLink\":\"https://images.unsplash.com/photo-1521572163474-6864f9cf17ab?auto=format&fit=crop&w=900&q=80\",\"description\":null,\"parentId\":null,\"parentName\":null,\"productCount\":1,\"createdAt\":\"DATE\",\"updatedAt\":\"DATE\",\"deletedAt\":null}],\"pagination\":{\"page\":2,\"limit\":2,\"totalItems\":3,\"totalPages\":2,\"hasNext\":false,\"hasPrev\":true}}",
)
