service/tests/requests/snapshots/categories/can_list_categories_with_search@categories.snap
---
source: tests/requests/categories.rs
expression: "(response.status_code(), response.text())"
---
(
    200,
    "{\"data\":[{\"id\":102,\"pid\":\"PID\",\"name\":\"trousers\",\"slug\":\"trousers\",\"imageLink\":\"https://images.unsplash.com/photo-1594633312681-425c7b97ccd1?auto=format&fit=crop&w=900&q=80\",\"description\":null,\"parentId\":null,\"parentName\":null,\"productCount\":2,\"createdAt\":\"DATE\",\"updatedAt\":\"DATE\",\"deletedAt\":null}],\"pagination\":{\"page\":1,\"limit\":20,\"totalItems\":1,\"totalPages\":1,\"hasNext\":false,\"hasPrev\":false}}",
)
