service/tests/requests/snapshots/categories/can_list_categories_without_parent@categories.snap
---
source: tests/requests/categories.rs
expression: "(response.status_code(), response.text())"
---
(
    200,
    "{\"data\":[{\"id\":103,\"pid\":\"PID\",\"name\":\"shoes\",\"slug\":\"shoes\",\"imageLink\":\"https://cdn.example.com/categories/shoes.png\",\"description\":null,\"parentId\":null,\"createdAt\":\"DATE\",\"updatedAt\":\"DATE\",\"deletedAt\":null},{\"id\":102,\"pid\":\"PID\",\"name\":\"trousers\",\"slug\":\"trousers\",\"imageLink\":\"https://cdn.example.com/categories/trousers.png\",\"description\":null,\"parentId\":null,\"createdAt\":\"DATE\",\"updatedAt\":\"DATE\",\"deletedAt\":null},{\"id\":101,\"pid\":\"PID\",\"name\":\"t-shirts\",\"slug\":\"t-shirts\",\"imageLink\":\"https://cdn.example.com/categories/tshirts.png\",\"description\":null,\"parentId\":null,\"createdAt\":\"DATE\",\"updatedAt\":\"DATE\",\"deletedAt\":null}],\"pagination\":{\"page\":1,\"limit\":20,\"totalItems\":3,\"totalPages\":1,\"hasNext\":false,\"hasPrev\":false}}",
)
