service/tests/requests/snapshots/categories/can_update_category_name@categories.snap
---
source: tests/requests/categories.rs
expression: "(response.status_code(), response.text())"
---
(
    201,
    "{\"id\":102,\"pid\":\"PID\",\"name\":\"pants\",\"slug\":\"pants\",\"imageLink\":\"https://cdn.example.com/categories/trousers.png\",\"description\":null,\"parentId\":null,\"createdAt\":\"DATE\",\"updatedAt\":\"DATE\",\"deletedAt\":null}",
)
