service/tests/requests/snapshots/categories/can_update_category_name_image_and_description@categories.snap
---
source: tests/requests/categories.rs
expression: "(response.status_code(), response.text())"
---
(
    201,
    "{\"id\":102,\"pid\":\"PID\",\"name\":\"chinos\",\"slug\":\"chinos\",\"imageLink\":\"https://cdn.example.com/categories/chinos.png\",\"description\":\"Smart casual trousers\",\"parentId\":null,\"createdAt\":\"DATE\",\"updatedAt\":\"DATE\",\"deletedAt\":null}",
)
