service/tests/requests/snapshots/categories/can_update_category_slug@categories.snap
---
source: tests/requests/categories.rs
expression: "(response.status_code(), response.text())"
---
(
    201,
    "{\"id\":102,\"pid\":\"PID\",\"name\":\"trousers\",\"slug\":\"smart-trousers\",\"imageLink\":\"https://images.unsplash.com/photo-1594633312681-425c7b97ccd1?auto=format&fit=crop&w=900&q=80\",\"description\":null,\"parentId\":null,\"createdAt\":\"DATE\",\"updatedAt\":\"DATE\",\"deletedAt\":null}",
)
