service/tests/requests/snapshots/categories/can_update_category_when_slug_already_exists@categories.snap
---
source: tests/requests/categories.rs
expression: "(response.status_code(), response.text())"
---
(
    201,
    "{\"id\":102,\"pid\":\"PID\",\"name\":\"trousers\",\"slug\":\"t-shirts-1\",\"imageLink\":\"https://cdn.example.com/categories/trousers.png\",\"description\":\"Duplicate seeded category\",\"parentId\":null,\"createdAt\":\"DATE\",\"updatedAt\":\"DATE\",\"deletedAt\":null}",
)
